--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 		<meta name="theme-color" content="#4BD765" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
@@ -14,9 +14,9 @@
 		<script
 			src="https://kit.fontawesome.com/ef45fd5e0a.js"
 			crossorigin="anonymous"></script>
-		<script type="text/javascript" src="/js/picker.js"></script>
+		<script type="text/javascript" src="js/picker.js"></script>
 		<title>Locali Torino</title>
-		<link rel="icon" type="image/x-icon" href="/img/logo.webp" />
+		<link rel="icon" type="image/x-icon" href="img/logo.webp" />
 		<!-- Google tag (gtag.js) -->
 		<script
 			async
@@ -36,7 +36,7 @@
 		<header>
 			<nav class="navbar">
 				<div class="logo">
-					<a href="/"><img src="/img/logo.webp" alt="Logo" /></a>
+					<a href="/"><img src="img/logo.webp" alt="Logo" /></a>
 				</div>
 				<div class="site-name">
 					<a href="/">
